--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Escnil994</title>
     <style>
         body{
-            background-color: aqua;
-            color: brown;
+            background-color: grey;
+            color: white;
             text-align: center;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Segoe UI', Roboto, 'Helvetica Neue';
         }
 
 
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <h1>Este dominio pertenece a NIlson Eduardo Escobar</h1>
+    <h1>Este dominio pertenece a Nilson Eduardo Escobar</h1>
     <h2>Muy pronto estará mi página web aquí</h2>
 </body>
 </html>
